tests/baselines/reference/generatorTypeCheck8.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck8.ts(1,11): error TS2320: Interface 'BadGenerator' cannot simultaneously extend types 'Iterator<number>' and 'Iterable<string>'.
  Named property '[Symbol.iterator]' of types 'Iterator<number>' and 'Iterable<string>' are not identical.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck8.ts (1 errors) ====
    interface BadGenerator extends Iterator<number>, Iterable<string> { }
              ~~~~~~~~~~~~
!!! error TS2320: Interface 'BadGenerator' cannot simultaneously extend types 'Iterator<number>' and 'Iterable<string>'.
!!! error TS2320:   Named property '[Symbol.iterator]' of types 'Iterator<number>' and 'Iterable<string>' are not identical.
    function* g3(): BadGenerator { }